--- a/template-course/titlepage.tex
+++ b/template-course/titlepage.tex
@@ -1,9 +1,12 @@
 \begin{titlepage}
     \begin{center}
         \LARGE
-        Название курса
+        Конспект по "название курса"
+
+        \large 
+        По лекциям "преподователь"
         \vfill
         \normalsize
-        дловжпдловыадж
+        Матфак, 2024-2025
     \end{center}
 \end{titlepage}
